# AI_software_team

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  pyproject.toml
docs/: spec_v1.md
docs/adr/: 0001-use-central-orchestration-for-v1.md
prompts/: architect.md  developer.md  pm.md  qa.md  reviewer.md
src/ai_software_team/: __init__.py  cli.py  github_adapter.py  handoffs.py  inspection.py  issue_breakdown.py  orchestration.py  runs.py  tracing.py
src/ai_software_team/agents/: adk.py  architect.py  pm.py  pm_discovery.py  testing.py
tests/: __init__.py  test_cli_walking_skeleton.py  test_milestone2_planning.py  test_milestone3_issue_breakdown.py  test_pm_discovery_conversation.py  test_tracing.py
